php-src/ext/standard/tests/assert/assert02.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Notice: Undefined variable: a in /root/php-src/ext/standard/tests/assert/assert02.php(5) : assert code on line 1

Warning: assert(): Assertion "$a" failed in /root/php-src/ext/standard/tests/assert/assert02.php on line 5
Failure evaluating code: 
aa=sd+as+safsafasfasafsaf

Warning: assert(): Assertion "0" failed in /root/php-src/ext/standard/tests/assert/assert02.php on line 13

Fatal error: Uncaught ParseError: syntax error, unexpected '=', expecting ';' in /root/php-src/ext/standard/tests/assert/assert02.php(18) : assert code:1
Stack trace:
#0 /root/php-src/ext/standard/tests/assert/assert02.php(18): assert('aa=sd+as+safsaf...')
#1 {main}

Next Error: Failure evaluating code: 
aa=sd+as+safsafasfasafsaf in /root/php-src/ext/standard/tests/assert/assert02.php:18
Stack trace:
#0 /root/php-src/ext/standard/tests/assert/assert02.php(18): assert('aa=sd+as+safsaf...')
#1 {main}
  thrown in /root/php-src/ext/standard/tests/assert/assert02.php on line 18